--- a/src/main/resources/database/info/dbInfo.properties
+++ b/src/main/resources/database/info/dbInfo.properties
@@ -1,10 +1,10 @@
 ## key = value
 
 ### 학원 DB 정보
-username = user01
-password = user01
-url = jdbc:oracle:thin:@192.168.1.79:1521:xe
-driver = oracle.jdbc.driver.OracleDriver
+#username = user01
+#password = user01
+#url = jdbc:oracle:thin:@192.168.1.79:1521:xe
+#driver = oracle.jdbc.driver.OracleDriver
 
 ### 집 DB 정보
 #username = 
